--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "homepage": "https://github.com/vimercati-samir/react-progress-stepper.git",
-  "name": "react-progress-stepper",
+  "name": "@lockistrike/react-progress-stepper",
   "main": "dist/index.js",
-  "version": "0.2.1",
+  "version": "0.2.8",
   "private": false,
   "files": [
     "dist",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vimercati-samir/react-progress-stepper.git"
+    "url": "git+https://github.com/vimercati-samir/react-progress-stepper.git"
   },
   "dependencies": {
     "styled-components": "^5.3.0"
@@ -61,18 +61,27 @@
     "@babel/cli": "^7.14.8",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/node-logger": "^6.3.7",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.7",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
+    "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/react": "^6.4.22",
     "cross-env": "^7.0.3",
     "gh-pages": "^3.2.3"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
-  }
+    "react-scripts": "5.0.1"
+  },
+  "description": "<p align=\"center\"> <br/> <img src=\"https://i.ibb.co/dKD1dYq/samir-repo.png\"> <br/> </p>",
+  "bugs": {
+    "url": "https://github.com/vimercati-samir/react-progress-stepper/issues"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "author": "lockistrike",
+  "license": "ISC"
 }
